# django-template

./: .pylintrc  manage.py  pyproject.toml  setup.cfg
config/: settings.py
scripts/: server.py
