[tool.poetry]
name = "django_template"
version = "0.1.0"
description = ""
authors = ["hanlee <me@hanlee.co>"]
packages = [
  { include="scripts", from="." },
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
yapf = "*"
flake8 = "*"

[tool.poetry.scripts]
start = 'scripts.server:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

